[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/malayalamfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/SandhyaPrarthana.gd" type="Script" id=2]
[ext_resource path="res://Buttons.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -111.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="HBoxContainer2/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="HBoxContainer2/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="HBoxContainer2/Next" to="." method="_on_Next_pressed"]

[editable path="HBoxContainer2"]
